#20: add /me/projects/stat handler
