# docs/swagger.yaml
@@ -1,25 +1,4 @@
 definitions:
-  delivery.CreateProjectIn:
-    properties:
-      name:
-        type: string
-    required:
-    - name
-    type: object
-  delivery.CreateProjectOut:
-    properties:
-      id:
-        type: integer
-    required:
-    - id
-    type: object
-  delivery.ProjectOut:
-    properties:
-      id:
-        type: integer
-      name:
-        type: string
-    type: object
   echo.HTTPError:
     properties:
       message: {}
@@ -60,6 +39,47 @@ definitions:
         type: string
       time_start:
         type: string
+    type: object
+  internal_project_delivery.CreateProjectIn:
+    properties:
+      name:
+        type: string
+    required:
+    - name
+    type: object
+  internal_project_delivery.CreateProjectOut:
+    properties:
+      id:
+        type: integer
+    required:
+    - id
+    type: object
+  internal_project_delivery.ProjectOut:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  internal_project_delivery.ProjectStat:
+    properties:
+      duration_in_hours:
+        type: number
+      id:
+        type: integer
+      name:
+        type: string
+      percent_duration:
+        type: number
+    type: object
+  internal_project_delivery.ProjectsStatOut:
+    properties:
+      projects:
+        items:
+          $ref: '#/definitions/internal_project_delivery.ProjectStat'
+        type: array
+      total_duration_in_hours:
+        type: number
     type: object
 info:
   contact: {}
@@ -141,10 +161,10 @@ paths:
       - application/json
       responses:
         "200":
-          description: success create project
+          description: success get projects
           schema:
             items:
-              $ref: '#/definitions/delivery.ProjectOut'
+              $ref: '#/definitions/internal_project_delivery.ProjectOut'
             type: array
         "400":
           description: bad request
@@ -155,6 +175,34 @@ paths:
           schema:
             $ref: '#/definitions/echo.HTTPError'
       summary: Get my projects.
+      tags:
+      - projects
+  /me/projects/stat:
+    get:
+      consumes:
+      - application/json
+      description: Get project stats
+      parameters:
+      - description: RFC3339 format
+        in: query
+        name: time_start
+        type: string
+      - description: RFC3339 format
+        in: query
+        name: time_end
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/internal_project_delivery.ProjectsStatOut'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Get project stats.
       tags:
       - projects
   /projects/create:
@@ -168,14 +216,14 @@ paths:
         name: project
         required: true
         schema:
-          $ref: '#/definitions/delivery.CreateProjectIn'
+          $ref: '#/definitions/internal_project_delivery.CreateProjectIn'
       produces:
       - application/json
       responses:
         "200":
           description: success create project
           schema:
-            $ref: '#/definitions/delivery.CreateProjectOut'
+            $ref: '#/definitions/internal_project_delivery.CreateProjectOut'
         "400":
           description: bad request
           schema:
