# internal/project/usecase/dto.go
@@ -5,3 +5,15 @@ type Project struct {
 	Name   string
 	UserID int64
 }
+
+type ProjectStatInfo struct {
+	ProjectID              int64
+	ProjectName            string
+	ProjectDurationInHours float64
+	ProjectDurationPercent float64
+}
+
+type AllProjectsStat struct {
+	TotalDurationInHours float64
+	ProjectsStat         []ProjectStatInfo
+}
